test: adds tests for attachments service