@@ -4,69 +4,151 @@ import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import eu.bbmri.eric.csit.service.negotiator.configuration.auth.NegotiatorUserDetails;
-import eu.bbmri.eric.csit.service.negotiator.database.model.Attachment;
-import eu.bbmri.eric.csit.service.negotiator.database.model.Negotiation;
-import eu.bbmri.eric.csit.service.negotiator.database.model.Person;
+import eu.bbmri.eric.csit.service.negotiator.database.model.*;
 import eu.bbmri.eric.csit.service.negotiator.database.repository.AttachmentRepository;
 import eu.bbmri.eric.csit.service.negotiator.database.repository.NegotiationRepository;
 import eu.bbmri.eric.csit.service.negotiator.dto.attachments.AttachmentDTO;
 import eu.bbmri.eric.csit.service.negotiator.dto.attachments.AttachmentMetadataDTO;
 import eu.bbmri.eric.csit.service.negotiator.exceptions.EntityNotFoundException;
+import eu.bbmri.eric.csit.service.negotiator.exceptions.ForbiddenRequestException;
 import eu.bbmri.eric.csit.service.negotiator.mappers.AttachmentMapper;
 import eu.bbmri.eric.csit.service.negotiator.service.DBAttachmentService;
+import eu.bbmri.eric.csit.service.negotiator.unit.context.WithMockNegotiatorUser;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import org.junit.Assert;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import java.util.*;
+import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.mockito.Spy;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.server.ResponseStatusException;
 
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration
 public class DBAttachmentServiceTest {
 
   @Mock AttachmentRepository attachmentRepository;
 
   @Mock NegotiationRepository negotiationRepository;
 
+  private static final long RESEARCHER_ID = 2L;
+  private static final String RESEARCHER_AUTH_NAME = "researcher";
+  private static final String RESEARCHER_AUTH_SUBJECT = "researcher@aai.eu";
+  private static final String RESEARCHER_AUTH_EMAIL = "researcher@aai.eu";
+  private static final long BIOBANKER_1_ID = 3L;
+  private static final String BIOBANKER_1_AUTH_NAME = "biobanker_1";
+  private static final String BIOBANKER_1_AUTH_SUBJECT = "biobanker_1@aai.eu";
+  private static final String BIOBANKER_1_AUTH_EMAIL = "biobanker_1@aai.eu";
+  private static final long BIOBANKER_2_ID = 4L;
+  private static final String BIOBANKER_2_AUTH_NAME = "biobanker_2";
+  private static final String BIOBANKER_2_AUTH_SUBJECT = "biobanker_2@aai.eu";
+  private static final String BIOBANKER_2_AUTH_EMAIL = "biobanker_2@aai.eu";
+  private static final long ADMIN_ID = 5L;
+  private static final String ADMIN_AUTH_NAME = "admin";
+  private static final String ADMIN_AUTH_SUBJECT = "admin@aai.eu";
+  private static final String ADMIN_AUTH_EMAIL = "admin@aai.eu";
+  private static final String ORG_1 = "Organization_1";
+  private static final String ORG_2 = "Organization_2";
+  private static Person researcher;
   @Spy ModelMapper modelMapper = new ModelMapper();
 
   @InjectMocks DBAttachmentService service;
 
   @InjectMocks AttachmentMapper attachmentMapper;
 
-  private AutoCloseable closeable;
+  @InjectMocks DBAttachmentService attachmentService;
+
+  private Attachment privateAttachment; // attachment which is not assigned to a negotiation
+  private Attachment publicNegotiationAttachment; // public attachment of a negotiation
+  private Attachment privateNegotiationAttachment; // private attachment of a negotiation
 
   @BeforeEach
   void before() {
-    closeable = MockitoAnnotations.openMocks(this);
     attachmentMapper.addMappings();
+    Person researcher =
+        Person.builder()
+            .id(RESEARCHER_ID)
+            .authName(RESEARCHER_AUTH_NAME)
+            .authEmail(RESEARCHER_AUTH_EMAIL)
+            .authSubject(RESEARCHER_AUTH_SUBJECT)
+            .build();
+
+    Person biobanker1 =
+        Person.builder()
+            .id(BIOBANKER_1_ID)
+            .authName(BIOBANKER_1_AUTH_NAME)
+            .authEmail(BIOBANKER_1_AUTH_EMAIL)
+            .authSubject(BIOBANKER_1_AUTH_SUBJECT)
+            .build();
+
+    DataSource dataSource = new DataSource();
+
+    Organization organization1 = Organization.builder().externalId(ORG_1).build();
+    Organization organization2 = Organization.builder().externalId(ORG_2).build();
+
+    Resource resource1 =
+        Resource.builder()
+            .dataSource(dataSource)
+            .sourceId("resource:1")
+            .name("Resource 1")
+            .organization(organization1)
+            .build();
+
+    Resource resource2 =
+        Resource.builder()
+            .dataSource(dataSource)
+            .sourceId("resource:2")
+            .name("Resource 2")
+            .organization(organization2)
+            .build();
+
+    organization1.setResources(Set.of(resource1));
+    organization2.setResources(Set.of(resource2));
+
+    Negotiation negotiation = Negotiation.builder().build();
+    negotiation.setCreatedBy(researcher);
+
+    byte[] data = "Hello, World!".getBytes();
+    String fileName = "text.txt";
+
+    privateAttachment =
+        Attachment.builder()
+            .name(fileName)
+            .payload(data)
+            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
+            .size((long) data.length)
+            .build();
+    privateAttachment.setCreatedBy(researcher);
+
+    publicNegotiationAttachment =
+        Attachment.builder()
+            .name(fileName)
+            .payload(data)
+            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
+            .size((long) data.length)
+            .negotiation(negotiation)
+            .build();
+    publicNegotiationAttachment.setCreatedBy(researcher);
+
+    privateNegotiationAttachment =
+        Attachment.builder()
+            .name(fileName)
+            .payload(data)
+            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
+            .size((long) data.length)
+            .negotiation(negotiation)
+            .organization(organization2)
+            .build();
+    privateNegotiationAttachment.setCreatedBy(researcher);
   }
 
-  @AfterEach
-  void after() throws Exception {
-    closeable.close();
-  }
-
-  /** Tests a correct file upload. */
   @Test
-  public void test_UploadFileForNegotiation_OK() {
+  public void test_CreateFileForNegotiation_OK() {
     byte[] data = "Hello, World!".getBytes();
     String fileName = "text.txt";
     MockMultipartFile file =
@@ -93,12 +175,8 @@ public class DBAttachmentServiceTest {
     Assertions.assertEquals(metadataDTO.getSize(), data.length);
   }
 
-  /**
-   * Tests that, in case the Negotiation of the attachment is not found, the attachment is not
-   * created and an appropriate Exception is thrown
-   */
   @Test
-  public void test_UploadFileForNegotiation_NegotiationNotFound() {
+  public void test_CreateFileForNegotiation_NegotiationNotFound() {
     byte[] data = "Hello, World!".getBytes();
     String fileName = "text.txt";
     MockMultipartFile file =
@@ -122,12 +200,8 @@ public class DBAttachmentServiceTest {
         });
   }
 
-  /**
-   * Tests that, in case an IOException is thrown, the attachment is not created and an appropriate
-   * Exception is thrown
-   */
   @Test
-  public void test_UploadFile_FailWhenIOException() throws IOException {
+  public void test_CreateFile_FailWhenIOException() throws IOException {
     Negotiation negotiation = Negotiation.builder().build();
     negotiation.setId("abcd");
 
@@ -138,9 +212,8 @@ public class DBAttachmentServiceTest {
         RuntimeException.class, () -> service.createForNegotiation("abcd", null, file));
   }
 
-  /** Tests a correct file upload. */
   @Test
-  public void test_UploadFileWithoutNegotiation_OK() {
+  public void test_CreateFileWithoutNegotiation_OK() {
     byte[] data = "Hello, World!".getBytes();
     String fileName = "text.txt";
     MockMultipartFile file =
@@ -163,70 +236,192 @@ public class DBAttachmentServiceTest {
     Assertions.assertEquals(metadataDTO.getSize(), data.length);
   }
 
-  /** Tests a correct retrieval of the metadata of all the attachments belonging to a Negotiation */
   @Test
-  public void test_GetAllForNegotiation_OK() {
-    byte[] data = "Hello, World!".getBytes();
-    String fileName = "text.txt";
+  @WithMockNegotiatorUser(
+      id = RESEARCHER_ID,
+      authName = RESEARCHER_AUTH_NAME,
+      authSubject = RESEARCHER_AUTH_SUBJECT,
+      authEmail = RESEARCHER_AUTH_EMAIL,
+      authorities = {"ROLE_RESEARCHER"})
+  public void test_findByNegotiation_All_AsResearcher() {
+    List<Attachment> attachments =
+        List.of(publicNegotiationAttachment, privateNegotiationAttachment);
+    when(attachmentRepository.findByNegotiationId("abcd")).thenReturn(attachments);
 
-    Attachment attachment =
-        Attachment.builder()
-            .name(fileName)
-            .payload(data)
-            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
-            .size((long) data.length)
-            .build();
-
-    when(attachmentRepository.findByNegotiationId("abcd")).thenReturn(List.of(attachment));
-
-    List<AttachmentMetadataDTO> attachments = service.findByNegotiation("abcd");
+    List<AttachmentMetadataDTO> attachmentsMetadata = service.findByNegotiation("abcd");
+    Assertions.assertEquals(attachmentsMetadata.size(), attachments.size());
     Assertions.assertEquals(
-        attachments.get(0).getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
-    Assertions.assertEquals(attachments.get(0).getName(), fileName);
-    Assertions.assertEquals(attachments.get(0).getSize(), data.length);
+        attachmentsMetadata.get(0).getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getSize(), publicNegotiationAttachment.getSize());
   }
 
-  /**
-   * Tests a correct retrieval of the metadata of all the attachments belonging to a Negotiation in
-   * case of empty list
-   */
   @Test
-  public void test_GetAllForNegotiation_EmptyList() {
-    when(attachmentRepository.findByNegotiationId("abcd")).thenReturn(Collections.emptyList());
+  @WithMockNegotiatorUser(
+      id = ADMIN_ID,
+      authName = ADMIN_AUTH_NAME,
+      authSubject = ADMIN_AUTH_SUBJECT,
+      authEmail = ADMIN_AUTH_EMAIL,
+      authorities = {"ROLE_ADMIN"})
+  public void test_findByNegotiation_All_AsAdmin() {
+    List<Attachment> attachments =
+        List.of(publicNegotiationAttachment, privateNegotiationAttachment);
+    when(attachmentRepository.findByNegotiationId("abcd")).thenReturn(attachments);
 
+    List<AttachmentMetadataDTO> attachmentsMetadata = service.findByNegotiation("abcd");
+    Assertions.assertEquals(attachmentsMetadata.size(), attachments.size());
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getSize(), publicNegotiationAttachment.getSize());
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_findByNegotiation_All_AsBiobanker() {
+    List<Attachment> attachments =
+        List.of(publicNegotiationAttachment, privateNegotiationAttachment);
+    when(attachmentRepository.findByNegotiationId("abcd")).thenReturn(attachments);
+
+    List<AttachmentMetadataDTO> attachmentsMetadata = service.findByNegotiation("abcd");
+    Assertions.assertEquals(attachmentsMetadata.size(), 1);
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(
+        attachmentsMetadata.get(0).getSize(), publicNegotiationAttachment.getSize());
+  }
+
+  @Test
+  public void test_findByNegotiation_EmptyList() {
+    when(attachmentRepository.findByNegotiationId("abcd")).thenReturn(Collections.emptyList());
     List<AttachmentMetadataDTO> attachments = service.findByNegotiation("abcd");
     Assertions.assertEquals(attachments.size(), 0);
   }
 
-  /** Tests correct retrieval of an attachment's metadata by negotiation id and attachment id */
   @Test
-  public void test_RetrieveByIdAndNegotiation_OK() {
-    byte[] data = "Hello, World!".getBytes();
-    String fileName = "text.txt";
-    Attachment attachment =
-        Attachment.builder()
-            .name(fileName)
-            .payload(data)
-            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
-            .size((long) data.length)
-            .build();
-
+  @WithMockNegotiatorUser(
+      id = RESEARCHER_ID,
+      authName = RESEARCHER_AUTH_NAME,
+      authSubject = RESEARCHER_AUTH_SUBJECT,
+      authEmail = RESEARCHER_AUTH_EMAIL,
+      authorities = {"ROLE_RESEARCHER"})
+  public void test_findByIdAndNegotiation_whenPublic_OK_AsResearcher() {
     when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
-        .thenReturn(Optional.of(attachment));
+        .thenReturn(Optional.of(publicNegotiationAttachment));
 
     AttachmentMetadataDTO attachments =
         service.findByIdAndNegotiation("attachment-id", "negotiation-id");
+
     Assertions.assertEquals(attachments.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
-    Assertions.assertEquals(attachments.getName(), fileName);
-    Assertions.assertEquals(attachments.getSize(), data.length);
+    Assertions.assertEquals(attachments.getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(attachments.getSize(), publicNegotiationAttachment.getSize());
   }
 
-  /**
-   * Tests failure of attachment's retrieval in case one of negotiation id or attachment id is not
-   * found
-   */
   @Test
-  public void test_RetrieveByNegotiationAndId_NotFound() {
+  @WithMockNegotiatorUser(
+      id = ADMIN_ID,
+      authName = ADMIN_AUTH_NAME,
+      authSubject = ADMIN_AUTH_SUBJECT,
+      authEmail = ADMIN_AUTH_EMAIL,
+      authorities = {"ROLE_ADMIN"})
+  public void test_findByIdAndNegotiation_whenPublic_OK_AsAdmin() {
+    when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
+        .thenReturn(Optional.of(publicNegotiationAttachment));
+
+    AttachmentMetadataDTO attachments =
+        service.findByIdAndNegotiation("attachment-id", "negotiation-id");
+
+    Assertions.assertEquals(attachments.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachments.getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(attachments.getSize(), publicNegotiationAttachment.getSize());
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_findByIdAndNegotiation_whenPublic_OK_AsBiobanker() {
+    when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
+        .thenReturn(Optional.of(publicNegotiationAttachment));
+
+    AttachmentMetadataDTO attachments =
+        service.findByIdAndNegotiation("attachment-id", "negotiation-id");
+
+    Assertions.assertEquals(attachments.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachments.getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(attachments.getSize(), publicNegotiationAttachment.getSize());
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = RESEARCHER_ID,
+      authName = RESEARCHER_AUTH_NAME,
+      authSubject = RESEARCHER_AUTH_SUBJECT,
+      authEmail = RESEARCHER_AUTH_EMAIL,
+      authorities = {"ROLE_RESEARCHER"})
+  public void test_findByIdAndNegotiation_whenPrivate_OK_AsResearcher() {
+    when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
+        .thenReturn(Optional.of(publicNegotiationAttachment));
+
+    AttachmentMetadataDTO attachments =
+        service.findByIdAndNegotiation("attachment-id", "negotiation-id");
+
+    Assertions.assertEquals(attachments.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachments.getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(attachments.getSize(), publicNegotiationAttachment.getSize());
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = ADMIN_ID,
+      authName = ADMIN_AUTH_NAME,
+      authSubject = ADMIN_AUTH_SUBJECT,
+      authEmail = ADMIN_AUTH_EMAIL,
+      authorities = {"ROLE_ADMIN"})
+  public void test_findByIdAndNegotiation_whenPrivate_OK_AsAdmin() {
+    when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
+        .thenReturn(Optional.of(publicNegotiationAttachment));
+
+    AttachmentMetadataDTO attachments =
+        service.findByIdAndNegotiation("attachment-id", "negotiation-id");
+
+    Assertions.assertEquals(attachments.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachments.getName(), publicNegotiationAttachment.getName());
+    Assertions.assertEquals(attachments.getSize(), publicNegotiationAttachment.getSize());
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_findByIdAndNegotiation_whenPrivate_Forbiddend_AsBiobanker() {
+    when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
+        .thenReturn(Optional.of(privateNegotiationAttachment));
+
+    Assertions.assertThrows(
+        ForbiddenRequestException.class,
+        () -> service.findByIdAndNegotiation("attachment-id", "negotiation-id"));
+  }
+
+  @Test
+  public void test_findByIdAndNegotiationId_NotFound() {
     when(attachmentRepository.findByIdAndNegotiationId("attachment-id", "negotiation-id"))
         .thenReturn(Optional.empty());
 
@@ -235,127 +430,139 @@ public class DBAttachmentServiceTest {
         () -> service.findByIdAndNegotiation("attachment-id", "negotiation-id"));
   }
 
-  private void setAuthenticationContext(Person authenticatedUser) {
-    NegotiatorUserDetails userDetails = mock(NegotiatorUserDetails.class);
-    when(userDetails.getPerson()).thenReturn(authenticatedUser);
-    Authentication authentication = mock(Authentication.class);
-    when(authentication.getPrincipal()).thenReturn(userDetails);
+  /**
+   * Test correct download of an attachment when the creator of the attachment is authenticated user
+   */
+  @Test
+  @WithMockNegotiatorUser(
+      id = RESEARCHER_ID,
+      authName = RESEARCHER_AUTH_NAME,
+      authSubject = RESEARCHER_AUTH_SUBJECT,
+      authEmail = RESEARCHER_AUTH_EMAIL,
+      authorities = {"ROLE_RESEARCHER"})
+  public void test_FindById_Ok_WhenTheAuthenticatedUser_IsCreator() {
+    when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.of(privateAttachment));
 
-    SecurityContext securityContext = mock(SecurityContext.class);
-    when(securityContext.getAuthentication()).thenReturn(authentication);
-    SecurityContextHolder.setContext(securityContext);
+    AttachmentDTO attachmentDTO = service.findById("attachment-id");
+    Assertions.assertEquals(attachmentDTO.getName(), privateAttachment.getName());
+    Assertions.assertEquals(
+        attachmentDTO.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachmentDTO.getSize(), privateAttachment.getSize());
+    Assertions.assertEquals(
+        Arrays.toString(attachmentDTO.getPayload()),
+        Arrays.toString(privateAttachment.getPayload()));
   }
 
   /**
    * Test correct download of an attachment when the creator of the attachment is authenticated user
    */
   @Test
-  public void test_DownloadById_Ok_WhenCreatorIsTheAuthenticatedUser() {
-    Person authenticatedUser = mock(Person.class);
-    when(authenticatedUser.getId()).thenReturn(2L);
-    setAuthenticationContext(authenticatedUser);
-
-    byte[] data = "Hello, World!".getBytes();
-    String fileName = "text.txt";
-    Attachment attachment =
-        Attachment.builder()
-            .name(fileName)
-            .payload(data)
-            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
-            .size((long) data.length)
-            .build();
-    attachment.setCreatedBy(authenticatedUser);
-
-    when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.of(attachment));
+  @WithMockNegotiatorUser(
+      id = ADMIN_ID,
+      authName = ADMIN_AUTH_NAME,
+      authSubject = ADMIN_AUTH_SUBJECT,
+      authEmail = ADMIN_AUTH_EMAIL,
+      authorities = {"ROLE_ADMIN"})
+  public void test_FindById_Ok_WhenAdmin() {
+    when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.of(privateAttachment));
 
     AttachmentDTO attachmentDTO = service.findById("attachment-id");
-    Assertions.assertEquals(attachmentDTO.getName(), fileName);
+    Assertions.assertEquals(attachmentDTO.getName(), privateAttachment.getName());
     Assertions.assertEquals(
         attachmentDTO.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
-    Assertions.assertEquals(attachmentDTO.getSize(), attachment.getSize());
-    Assertions.assertEquals(Arrays.toString(attachmentDTO.getPayload()), Arrays.toString(data));
-  }
-
-  /**
-   * Test correct download of an attachment when the creator of the negotiation is the authenticated
-   * user even if he is different then the attachment's owner
-   */
-  @Test
-  public void test_DownloadById_Ok_WhenNegotiationCreatorIsAuthenticatedUser() {
-    Person authenticatedUser = mock(Person.class);
-    when(authenticatedUser.getId()).thenReturn(2L);
-    setAuthenticationContext(authenticatedUser);
-
-    Person attachmentOwner = mock(Person.class);
-    when(attachmentOwner.getId()).thenReturn(1L);
-    setAuthenticationContext(attachmentOwner);
-
-    Negotiation negotiation = mock(Negotiation.class);
-    when(negotiation.getCreatedBy()).thenReturn(authenticatedUser);
-
-    byte[] data = "Hello, World!".getBytes();
-    String fileName = "text.txt";
-    Attachment attachment =
-        Attachment.builder()
-            .name(fileName)
-            .payload(data)
-            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
-            .size((long) data.length)
-            .negotiation(negotiation)
-            .build();
-    attachment.setCreatedBy(attachmentOwner);
-
-    when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.of(attachment));
-
-    AttachmentDTO attachmentDTO = service.findById("attachment-id");
-    Assertions.assertEquals(attachmentDTO.getName(), fileName);
+    Assertions.assertEquals(attachmentDTO.getSize(), privateAttachment.getSize());
     Assertions.assertEquals(
-        attachmentDTO.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
-    Assertions.assertEquals(attachmentDTO.getSize(), attachment.getSize());
-    Assertions.assertEquals(Arrays.toString(attachmentDTO.getPayload()), Arrays.toString(data));
-  }
-
-  /**
-   * Test that, if the creator of the attachment is not the authenticated person, it fails with
-   * forbidden
-   */
-  @Test
-  public void test_DownloadById_Forbidden() {
-    Person authenticatedUser = mock(Person.class);
-    when(authenticatedUser.getId()).thenReturn(2L);
-    setAuthenticationContext(authenticatedUser);
-
-    Person owner = mock(Person.class);
-    when(owner.getId()).thenReturn(1L);
-
-    byte[] data = "Hello, World!".getBytes();
-    String fileName = "text.txt";
-    Attachment attachment =
-        Attachment.builder()
-            .name(fileName)
-            .payload(data)
-            .contentType(MediaType.APPLICATION_OCTET_STREAM_VALUE)
-            .size((long) data.length)
-            .build();
-    attachment.setCreatedBy(owner);
-
-    when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.of(attachment));
-    Assertions.assertThrows(ResponseStatusException.class, () -> service.findById("attachment-id"));
+        Arrays.toString(attachmentDTO.getPayload()),
+        Arrays.toString(privateAttachment.getPayload()));
   }
 
   @Test
-  public void test_DownloadById_NotFound() {
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_FindById_Forbidden_WhenTheAuthenticatedUser_IsNotCreator() {
+    when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.of(privateAttachment));
+    Assertions.assertThrows(
+        ForbiddenRequestException.class, () -> service.findById("attachment-id"));
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_FindById_NotFound() {
     when(attachmentRepository.findById("attachment-id")).thenReturn(Optional.empty());
     Assertions.assertThrows(EntityNotFoundException.class, () -> service.findById("attachment-id"));
   }
 
+  @Test
+  @WithMockNegotiatorUser(
+      id = RESEARCHER_ID,
+      authName = RESEARCHER_AUTH_NAME,
+      authSubject = RESEARCHER_AUTH_SUBJECT,
+      authEmail = RESEARCHER_AUTH_EMAIL,
+      authorities = {"ROLE_RESEARCHER"})
+  public void test_FindMetadataById_Ok_WhenTheAuthenticatedUser_IsCreator() {
+    when(attachmentRepository.findMetadataById("attachment-id"))
+        .thenReturn(Optional.of(privateAttachment));
+
+    AttachmentMetadataDTO attachmentDTO = service.findMetadataById("attachment-id");
+    Assertions.assertEquals(attachmentDTO.getName(), privateAttachment.getName());
+    Assertions.assertEquals(
+        attachmentDTO.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachmentDTO.getSize(), privateAttachment.getSize());
+  }
+
   /**
-   * Tests that, when the provided file id is not found, the service propagates the exception raised
-   * by the repository
+   * Test correct download of an attachment when the creator of the attachment is authenticated user
    */
   @Test
-  public void test_findById_NotFound() {
-    when(attachmentRepository.findById("abcd")).thenReturn(Optional.empty());
-    Assert.assertThrows(EntityNotFoundException.class, () -> service.findById("abcd"));
+  @WithMockNegotiatorUser(
+      id = ADMIN_ID,
+      authName = ADMIN_AUTH_NAME,
+      authSubject = ADMIN_AUTH_SUBJECT,
+      authEmail = ADMIN_AUTH_EMAIL,
+      authorities = {"ROLE_ADMIN"})
+  public void test_FindMetadataById_Ok_WhenAdmin() {
+    when(attachmentRepository.findMetadataById("attachment-id"))
+        .thenReturn(Optional.of(privateAttachment));
+    AttachmentMetadataDTO attachmentDTO = service.findMetadataById("attachment-id");
+    Assertions.assertEquals(attachmentDTO.getName(), privateAttachment.getName());
+    Assertions.assertEquals(
+        attachmentDTO.getContentType(), MediaType.APPLICATION_OCTET_STREAM_VALUE);
+    Assertions.assertEquals(attachmentDTO.getSize(), privateAttachment.getSize());
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_FindMetadataById_Forbidden_WhenTheAuthenticatedUser_IsNotCreator() {
+    when(attachmentRepository.findMetadataById("attachment-id"))
+        .thenReturn(Optional.of(privateAttachment));
+    Assertions.assertThrows(
+        ForbiddenRequestException.class, () -> service.findMetadataById("attachment-id"));
+  }
+
+  @Test
+  @WithMockNegotiatorUser(
+      id = BIOBANKER_1_ID,
+      authName = BIOBANKER_1_AUTH_NAME,
+      authSubject = BIOBANKER_1_AUTH_SUBJECT,
+      authEmail = BIOBANKER_1_AUTH_EMAIL,
+      authorities = {"ROLE_REPRESENTATIVE"})
+  public void test_FindMetadataById_NotFound() {
+    when(attachmentRepository.findMetadataById("attachment-id")).thenReturn(Optional.empty());
+    Assertions.assertThrows(
+        EntityNotFoundException.class, () -> service.findMetadataById("attachment-id"));
   }
 }
